2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PDFTOOLS): Rename this...
	(GROFF_POPPLER): ...to this.
	* configure.ac: Update call site.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_UCHARDET_CHECK): Rename this...
	(GROFF_UCHARDET_NOTICE): ...to this.
	* configure.ac: Update call site.

	* m4/groff.m4 (GROFF_UCHARDET_NOTICE): Tighten wording of
	message reported to user.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PNMTOOLS_CAN_BE_QUIET,
	GROFF_PNMTOPS_NOSETPAGE): Skip check if prerequisite not met.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_CHECK): Rename this...
	(GROFF_URW_FONTS_NOTICE): ...to this.
	(GROFF_URW_FONTS): ...and this...
	(GROFF_URW_FONTS_CHECK): ...to this.
	(GROFF_URW_FONTS_NOTICE): Give lengthy notice message a one-line
	summary.
	* configure.ac: Update call sites.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS): Refactor.  If our prerequisites
	are not met (availability of 'awk' and 'gs'), don't even run the
	check logic or print a "checking" message.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	Handle missing programs required to construct files needed at
	runtime by gropdf more gracefully.  Rename and refactor
	configuration-time logic to be more understandable.

	* configure.ac:
	* m4/groff.m4: Rename `GROFF_PDFDOC_PROGRAMS` macro to
	`GROFF_CHECK_GROPDF_PROGRAMS`.  Rename shell variable
	`make_pdfdoc` to `use_gropdf`.  Set it explicitly to "no" or
	"yes" instead of null or not null.

	* configure.ac:
	* m4/groff.m4:
	* doc/doc.am: Rename `BUILD_PDFDOC` to `USE_GROPDF`.

	* configure.ac: Call `GROFF_GROPDF_PROGRAM_NOTICE`.

	* doc/doc.am: Bracket definition of `PROCESSEDDOCFILES_PDF`
	macro and `$(PROCESSEDDOCFILES_PDF)` dependency declaration in